test/good/binOpExpr.lat
int main() {
	printInt(1+1);
	printInt(5-1);
	printInt(2*3);
	printInt(16/2);
	printInt(210 % 100);
}
