test/bad/add.lat
int main() {
    int n;
    string b;
    n + b;
}
